# able-workflow-etl-copier

./: .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  copier.yml  environment-py312-dev.yaml  pyproject.toml  tox.ini  versions.json
.github/workflows/: ci.yml  docs-pages.yml  main.yml  pr.yml
dev/: 404.html  index.html
dev/SUMMARY/: index.html
dev/contributing/: index.html
dev/examples/: index.html
dev/examples/SUMMARY/: index.html
dev/examples/open-meteo/: index.html
dev/examples/open-meteo/01-draft-rule/: index.html
dev/examples/open-meteo/02-draft-extract-external/: index.html
dev/examples/open-meteo/03-schema-external/: index.html
dev/examples/open-meteo/04-draft-transform/: index.html
dev/examples/open-meteo/SUMMARY/: index.html
dev/quick-reference/: index.html
dev/quick-reference/SUMMARY/: index.html
dev/quick-reference/post-copy/: index.html
dev/search/: search_index.json
docs/: README.md  mkdocs.yml
docs/_gen-files-scripts/: render_summaries.py
docs/docs/: SUMMARY.md  index.md
docs/docs/contributing/: index.md
docs/docs/examples/: SUMMARY.md  index.md
docs/docs/examples/open-meteo/: 01-draft-rule.md  02-draft-extract-external.md  03-schema-external.md  04-draft-transform.md  SUMMARY.md  index.md
docs/docs/quick-reference/: index.md  post-copy.md
example-answers/able-weather-01/: etl.yml
example-answers/able_weather/: etl.yml
example-answers/able_weather_00/: etl.yml
example-answers/able_weather_01/: etl.yml
example-answers/able_weather_02/: etl.yml
example-answers/able_weather_02/completed/: pyproject.toml
example-answers/able_weather_02/completed/able_weather/datasets/weather/open_meteo/runner/: extract_external.py
example-answers/able_weather_02/completed/tests/able_weather/datasets/weather/open_meteo/runner/: test_extract_external.py
example-answers/able_weather_02/completed/workflow/rules/datasets/weather/: open_meteo.smk
example-answers/able_weather_02/diffs/: pyproject.toml.diff
example-answers/able_weather_03/: etl.yml  module.yml  package.yml
example-answers/able_weather_03/completed/: pyproject.toml
example-answers/able_weather_03/diffs/: pyproject.toml.diff
example-answers/able_weather_04/: etl.yml
example-answers/able_weather_04/diffs/: pyproject.toml.diff
example-answers/weh_interviews/: etl.yml  module.yml
latest/SUMMARY/: index.html
latest/examples/SUMMARY/: index.html
latest/examples/open-meteo/01-draft-rule/: index.html
latest/examples/open-meteo/SUMMARY/: index.html
latest/quick-reference/: index.html
latest/quick-reference/SUMMARY/: index.html
latest/quick-reference/post-copy/: index.html
main/: 404.html  index.html
main/SUMMARY/: index.html
main/contributing/: index.html
main/examples/: index.html
main/examples/SUMMARY/: index.html
main/examples/open-meteo/: index.html
main/examples/open-meteo/01-draft-rule/: index.html
main/examples/open-meteo/02-draft-extract-external/: index.html
main/examples/open-meteo/03-schema-external/: index.html
main/examples/open-meteo/04-draft-transform/: index.html
main/examples/open-meteo/SUMMARY/: index.html
main/quick-reference/: index.html
main/quick-reference/SUMMARY/: index.html
main/quick-reference/post-copy/: index.html
main/search/: search_index.json
scripts/: conda_update.sh  example_diffs_regenerate.py  pull_able_workflow_copier.py  sandbox_examples_generate.py
tasks/: append_config_include.py  append_smk_include.py  copy_example.py
template/.copier-answers/post-copier-todos/: etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-01-rule.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-03-schema_external.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-04-transform.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-06-load.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-10-docs.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}.md.jinja
template/.copier-answers/post-copier-todos/etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-subissues/: 01-rule.md.jinja  04-transform.md.jinja  05-schema.md.jinja  06-load.md.jinja  07-extract.md.jinja  08-main.md.jinja  10-docs.md.jinja  (+3 more)
template/logs/post-copier-todos/: etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-01-rule.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-02-extract_external.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-03-schema_external.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-04-transform.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-05-schema.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-06-load.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-07-extract.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-08-main.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-09-integration-tests.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}-10-docs.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_name }}.md.jinja  etl-{{ module_type }}-{{ module_name }}-{{ etl_type }}.md.jinja
tests/scripts/: test_append_smk_include.py  test_config_schema_validity.py  test_copy_example.py  test_example_diffs_regenerate.py  test_sandbox_examples_generate.py
tests/template/: conftest.py  test_example_filtering.py
tests/template/rendered/: test_copier_answers.py  test_dir_snakefmt_pyproject_toml.py  test_includes_order.py  test_post_copier_todos.py
tests/template/tox/: conftest.py  test_tox_envs.py
v0.1.0/: 404.html  index.html
v0.1.0/SUMMARY/: index.html
v0.1.0/examples/: index.html
v0.1.0/examples/SUMMARY/: index.html
v0.1.0/examples/open-meteo/: index.html
v0.1.0/quick-reference/post-copy/: index.html
v0.1.1/: 404.html  objects.inv
v0.1.1/SUMMARY/: index.html
v0.1.1/examples/SUMMARY/: index.html
v0.1.1/examples/open-meteo/: index.html
v0.1.1/quick-reference/: index.html
v0.1.1/quick-reference/SUMMARY/: index.html
v0.1.1/search/: search_index.json
(+51 files in other folders)
