#:schema https://json.schemastore.org/pyproject.json
# https://github.com/tamasfe/taplo/issues/620#issuecomment-2625975106

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "able-workflow-weather-example"
# Dynamic versioning is not supported by Snakemake modules
version = "0.1.0-rc20250624-1200"
description = "A snakemake workflow with an associated python package containing modules for datasets, features, and models for extracting, transforming, and loading weather data."
authors = [
    { name = "Michael Kane", email = "mi.kane@northeastern.edu" }
]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.13"

# Minimal runtime dependencies for package to read and validate (schemas)
# data produced by previously executed workflows using this same package
dependencies = [
  "loguru>=0.7.2",
  "numpy>=2.2.5",
  "pandas>=2.2.3",
  "pandera>=0.24",
  "pyarrow>=20.0.0",
  "pydantic>=2.11.4",
  "python-dotenv>=1.1.0",
  "tqdm>=4.67.1",
  "typer>=0.15.3",
]

[project.optional-dependencies]

# These extras are required to run the python package within
# a snakemake workflow. In order to build the
# documentation for the package, all of the optional-dependencies
# must be able to be installed simultaneously.
runner = [
  "snakemake>=9.3.3",
  # open-meteo API dependencies
  "openmeteo-requests",
  "requests-cache",
  "retry-requests",
  # Add additional dependencies for new modules and ETL process here.
]

[dependency-groups]
# Optional dependencies for development, CI, and Jupyter workflows
# that are not inherently part of the package.

# Minimal snakemake workflow dependencies
# Replaces `workflow/envs/global.yaml` since `global.yaml`
# cannot be cached before a workflow goes offline.
snakemake = [
  "snakemake>=9.3.3",
]
workflow = [
  { include-group = "snakemake" },
  "json5>=0.12.0",
  "loguru>=0.7.2",
  "graphviz>=0.20.3",
  "pandas>=2.2.3",
  "pyproject2conda>=0.19.1",
  "ruamel.yaml>=0.18.6",
]

# Jupyter / data-viz workflows
notebook = [
  "ipython>=9.2.0",
  "itables>=2.3.0",
  "jupyterlab>=4.4.2",
  "matplotlib>=3.10.1",
  "nbconvert>=7.16.6",
  "notebook>=7.4.2",    # needed by papermill
  "papermill>=2.6.0",
  "seaborn>=0.13.2",
]

docs = [
  { include-group = "workflow" },
  "lxml>=5.4.0",
  "mike>=2.1.3",
  "mkdocs>=1.6.1",
  "mkdocs-include-markdown-plugin>=7.1.6",
  "mkdocs-inline-select-svg-plugin>=0.1.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.9",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-material>=9.6.14",
  "mkdocs-mermaid2-plugin>=1.2.1",
  "mkdocs-section-index>=0.3.10",
  "mkdocstrings-python>=1.16.10",
  "notebook>=7.4.2",
  "pymdown-extensions>=10.15",
]

lint = [
  "black>=24.3,<25.0", # Currently being held back by `snakefmt`
  "ruff>=0.11.8",
  "snakefmt>=0.11.0",

  # Add jupyter extras to black
  # See https://github.com/psf/black/blob/main/pyproject.toml
  "ipython>=7.8.0",
  "tokenize-rt>=3.2.0",
]

test = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "pytest-sugar>=1.0.0",
  "pytest-order>=1.3.0",
]

tox = [
  "tox>=4.25.0",
]

typecheck = [
  "mypy>=1.15.0",
  # stubs
  "loguru>=0.7.2",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3",
  "pandera>=0.24",
  "pydantic>=2.11.4",
  "types-tqdm>=4.67.0",
  "types-openpyxl>=3.1.5",
  "typer>=0.15.3",
]

# Adding and updating copier template
copier = [
  "copier>=9.7.1",
  "loguru>=0.7.2",
  "ruamel.yaml>=0.18.12",
  "typer>=0.16.0",

  # jinja2 extensions
  "cookiecutter>=2.6.0",
  "copier-templates-extensions>=0.3.1",
  "jinja2-jsonschema>=0.3.0",
]

# development / CI
dev = [
  "pip>=25.1.1",
  "pre-commit>=4.2.0",
  { include-group = "copier" },
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "notebook" },
  { include-group = "test" },
  { include-group = "tox" },
  { include-group = "typecheck" },
  { include-group = "workflow" },
]

[project.urls]
Repository = "https://github.com/NEU-ABLE-LAB/able-workflow-weather-example"
Documentation = "https://github.com/NEU-ABLE-LAB/able-workflow-weather-example"
Homepage = "https://github.com/NEU-ABLE-LAB/able-workflow-weather-example"

[tool.coverage.run]
parallel = true
# TODO-copier-package Add docs and hooks python
source = [
    "able_weather",
    "workflow/scripts",
]
omit   = [
    "tests/*",                       # skip everything in tests/
    "**/conftest.py",                # skip pytest helpers
    "**/__init__.py",                # often trivial
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
]

[tool.mypy]
python_version = "3.11"
plugins = [
  # https://pandera.readthedocs.io/en/stable/mypy_integration.html
  "pandera.mypy",
  # https://docs.pydantic.dev/1.10/mypy_plugin/
  "pydantic.mypy",
]
strict = true
exclude = '(^|/)tests/.*\.py$'
files = ["able_weather"]

[[tool.mypy.overrides]]
# Snakemake does not provide type hints for its modules,
# so we need to ignore them
module = "snakemake.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pydantic-mypy]
# With this, the plugin makes the generated `__init__` for Pydantic models
# require exact types (no coercion allowed in type checking). For example, if
# a field is `age: int` and you call `User(age="123")`, Mypy will error
# because `"123"` is a str (even though Pydantic might coerce it at runtime).
# This is useful to enforce correct types at compile time.
warn_untyped_fields = true
# Mypy will error if any Pydantic model field is not annotated with a type.
# This ensures you  don't accidentally leave a field without a type, which
# would be treated as `Any`.
init_typed          = true
# Ensures that if you pass an unexpected field to a model’s constructor,
# Mypy will flag it (even if Pydantic might allow it due to `extra` settings).
# This aligns with using  `extra="forbid"` at runtime.
init_forbid_extra   = true

[tool.pyproject2conda]
channels = [
    "conda-forge",
]
template-python = "workflow/envs/pyproject2conda/able_weather-py{py}-{env}"
template = "workflow/envs/pyproject2conda/able_weather-{env}"

[tool.pyproject2conda.dependencies]
copier-templates-extensions = { pip = true }
jinja2-jsonschema = { pip = true }
# Install GraphViz to visualize the Snakemake DAG
graphviz = { channel = "conda-forge", packages = ["graphviz>=12.2.1"]}
mkdocs-inline-select-svg-plugin = { pip = true }
mkdocs-mermaid2-plugin = { pip = true }
mkdocs-section-index = { pip = true }
mkdocstrings = { skip = true, packages = ["mkdocstrings-python>=1.16.10"] }
openmeteo-requests = { pip = true }
retry-requests = { pip = true }
snakemake = { channel = "bioconda"}
snakefmt = { channel = "bioconda"}

# --- PyProject2Conda environments ---
# When adding a new environment, add it to
# `config/config.yaml` `CONDA.ENVS` list too.

[tool.pyproject2conda.envs."core"]
style = ["yaml"]
header = true
python = "highest"

[tool.pyproject2conda.envs."core-runner"]
style = ["yaml"]
header = true
python = "highest"
extras-or-groups = ["runner"]

[tool.pyproject2conda.envs."dev"]
style = ["yaml"]
header = true
python = "highest"
extras-or-groups = ["dev"]

[tool.pyproject2conda.envs."dev-runner"]
style = ["yaml"]
header = true
python = "highest"
extras-or-groups = ["runner","dev"]

[tool.pyproject2conda.envs."docs"]
style = ["yaml"]
header = true
python = "highest"
extras-or-groups = ["runner","docs"]

[tool.pyproject2conda.envs."notebook"]
style = ["yaml"]
header = true
python = "highest"
extras-or-groups = ["notebook"]

[tool.pyproject2conda.envs."tox"]
style = ["yaml"]
header = true
python = "highest"
skip-package = true
extras-or-groups = ["tox"]
template-python = "workflow/envs/able_weather-py{py}-{env}"
template = "workflow/envs/able_weather-{env}"

[tool.pyproject2conda.envs."workflow"]
style = ["yaml"]
header = true
python = "highest"
skip_package = true
extras-or-groups = ["workflow"]
template-python = "workflow/envs/able_weather-py{py}-{env}"
template = "workflow/envs/able_weather-{env}"

[tool.ruff]
line-length = 79
src = ["able_weather", "workflow/scripts"]
include = [
    "pyproject.toml",
    "able_weather/**/*.py",
    "tests/**/*.py",
    "workflow/scripts/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "I",  # Import sorting
    "T201",  # Do not allow `print()` statements. Encourage `loguru` instead.
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg  = "Use Loguru instead."
"warnings".msg = "Use Loguru instead."

[tool.ruff.lint.isort]
known-first-party = ["able_weather"]

[tool.setuptools.packages.find]
include = ["able_weather*"]

[tool.snakefmt]
line_length = 79
include = '\.smk$|^Snakefile$'
